salesforce-port/force-app/main/default/objects/Expense_Report__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reports to Approve</relationshipLabel>
    <relationshipName>Reports_To_Approve</relationshipName>
</CustomField>