salesforce-port/force-app/main/default/objects/Expense_Report__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>