salesforce-port/force-app/main/default/objects/Expense_Report__c/fields/Expense_Count__c.field-meta.xml
<CustomField>
    <fullName>Expense_Count__c</fullName>
    <label>Expense Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>