salesforce-port/force-app/main/default/objects/Expense_Report__c/fields/Reimbursable_Total__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable_Total__c</fullName>
    <label>Reimbursable Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>